--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              JMAXION
+bio:                'Sangmyung University student'
+description:        "personal study & etc"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
-locale:             en_US
+locale:             ko_KR
 url:                https://jmaxion.github.io/Moon
 
 # Jekyll
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   JMAXION
 
 # Social
 # if you don't have any of social below, comment the line.
@@ -38,23 +38,23 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            username
-facebook:           username
-github-url:         username
+#twitter:            username
+facebook:           satgat981111@naver.com
+github-url:         jmaxion.github.com
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          username
+instagram:          satgat981111@naver.com
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:              username
 #dribbble:          username
-#youtube:           username
+youtube:            satgat981111
 #youtube-channel:   channel
-#soundcloud:        username
+soundcloud:         satgat981111@naver.com
 #weibo:             username
 #flickr:            username
 #codepen:           username
