--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ github-url:         jmaxion.github.com
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          satgat981111@naver.com
+instagram:          satgat981111
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
