--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,9 @@ instagram:          satgat981111
 #foursquare:        username
 #steam:              username
 #dribbble:          username
-youtube:            satgat981111
+youtube:            UCjd6Hckk-0s7k903wkV3qrw
 #youtube-channel:   channel
-soundcloud:         satgat981111@naver.com
+#soundcloud:         satgat981111@naver.com
 #weibo:             username
 #flickr:            username
 #codepen:           username
