--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ instagram:          satgat981111
 #foursquare:        username
 #steam:              username
 #dribbble:          username
-youtube:            UCjd6Hckk-0s7k903wkV3qrw
+#youtube:            UCjd6Hckk-0s7k903wkV3qrw
 #youtube-channel:   channel
 #soundcloud:         satgat981111@naver.com
 #weibo:             username
