--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   JMAXION
+disqus_shortname:   https://jmaxion.github.io
 
 # Social
 # if you don't have any of social below, comment the line.
